Modified domain name in default.conf

--- a/user_conf.d/default.conf
+++ b/user_conf.d/default.conf
@@ -4,12 +4,12 @@ server {
     listen [::]:443 ssl default_server reuseport;
 
     # Domain names this server should respond to.
-    server_name ${FQDN} www.${FQDN};
+    server_name aquariumdobrasil.com www.aquariumdobrasil.com;
 
     # Load the certificate files.
-    ssl_certificate         /etc/letsencrypt/live/${FQDN}/fullchain.pem;
-    ssl_certificate_key     /etc/letsencrypt/live/${FQDN}/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/${FQDN}/chain.pem;
+    ssl_certificate         /etc/letsencrypt/live/aquariumdobrasil.com/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/aquariumdobrasil.com/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/aquariumdobrasil.com/chain.pem;
 
     # Load the Diffie-Hellman parameter.
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
