--- a/user_conf.d/default.conf
+++ b/user_conf.d/default.conf
@@ -14,6 +14,5 @@ server {
     # Load the Diffie-Hellman parameter.
     ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
-    return 200 'Let\'s Encrypt certificate successfully installed!';
-    add_header Content-Type text/plain;
+    root html;
 }
