--- a/user_conf.d/default.conf
+++ b/user_conf.d/default.conf
@@ -1,4 +1,11 @@
 server {
+    listen 80 default_server;
+    server_name aquariumdobrasil.com www.aquariumdobrasil.com;
+    return 301 https://$server_name$request_uri;
+}
+
+
+server {
     # Listen to port 443 on both IPv4 and IPv6.
     listen 443 ssl default_server reuseport;
     listen [::]:443 ssl default_server reuseport;
