--- a/user_conf.d/default.conf
+++ b/user_conf.d/default.conf
@@ -1,8 +1,8 @@
-# server {
-#     listen 80 default_server;
-#     server_name aquariumdobrasil.com www.aquariumdobrasil.com;
-#     return 301 https://$server_name$request_uri;
-# }
+server {
+    listen 80 aquariumdobrasil;
+    server_name aquariumdobrasil.com www.aquariumdobrasil.com;
+    return 301 https://$server_name$request_uri;
+}
 
 
 server {
